@@ -1,3 +1,9 @@
+2012-08-03  Tom Tromey  <tromey@redhat.com>
+
+	* opncls.c (_bfd_delete_bfd): Now static.
+	* libbfd-in.h (_bfd_delete_bfd): Don't declare.
+	* libbfd.h: Rebuild.
+
 2012-08-02  Sean Keys  <skeys@ipdatasys.com>
 
 	* elf32-m68hc1x.c (elf32_m68hc11_relocate_section): Modified
